<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDirectionActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/route_direction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="116dp"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/previous_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="previous"
        app:layout_constraintTop_toTopOf="@id/next_btn"
        app:layout_constraintBottom_toBottomOf="@id/next_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_btn"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="NEXT\n------\nENTRANCE AND EXIT GATE, 310"
        app:layout_constraintWidth_max="180dp"
        app:layout_constraintBottom_toTopOf="@id/back_to_plan"
        app:layout_constraintStart_toStartOf="@id/skip_btn"
        app:layout_constraintEnd_toEndOf="@id/settings_button"/>

    <Button
        android:id="@+id/back_to_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="24dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_to_plan"
        app:layout_constraintEnd_toStartOf="@id/settings_button" />

    <Button
        android:id="@+id/settings_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="59dp"
        android:layout_height="56dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbutton"
        app:icon="@android:drawable/ic_menu_preferences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintGuide_percent="0.5" />-->

</androidx.constraintlayout.widget.ConstraintLayout>